# SpaceFramework

./: .gitignore  CMakeLists.txt  README.md  gmon.out
Engine/: entity.cpp  entity.h  image.cpp  image.h  input.cpp  input.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  vector2.cpp  vector2.h
cmake/: FindSDL2_image.cmake
documents/: Planet generation description
engine/: entity.cpp  entity.h  image.cpp  image.h  input.cpp  input.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  vector2.cpp  vector2.h
lsa/entities/: bullet.cpp  planet.cpp  planet.h  spaceship.cpp  spaceship.h  spaceshipicon.cpp  spaceshipicon.h
lsm/: core.cpp  particle.cpp  particle.h  particlesystem.cpp  particlesystem.h
lsm/entities/: bullet.cpp  bullet.h  planet.cpp  planet.h  spaceship.cpp  spaceship.h
